force-app/main/default/objects/formation__c.object
<CustomObject>
    <description>pour tests DEV401</description>
    <fields>
        <fullName>AutoNumberTRA__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>AutoNumberTRA</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Business_Line</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBU</valueSetName>
        </valueSet>
    </fields>
    <label>Formation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Formation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>